Namespace changed to CRON\Flow\Log\Backend

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	},
     "autoload": {
         "psr-4": {
-            "CRON\\Syslog\\": "Classes"
+            "CRON\\Flow\\Log\\Backend\\": "Classes"
         }
     }
 }
